[gd_scene load_steps=14 format=3 uid="uid://c2qs4gtefs63l"]

[ext_resource type="Script" uid="uid://5s3v2rb0texx" path="res://level_2_game_scene.gd" id="1_ahagg"]
[ext_resource type="Texture2D" uid="uid://jbulolrw1r8k" path="res://Assets/istockphoto-590596406-612x612.jpg" id="1_xqgqe"]
[ext_resource type="PackedScene" uid="uid://dlhv7kcpwx57j" path="res://Student.tscn" id="2_1yuii"]
[ext_resource type="PackedScene" uid="uid://br7etbaf7nj5l" path="res://sir.tscn" id="3_78eq0"]
[ext_resource type="FontFile" uid="uid://c7r7dvbryxaw0" path="res://Fonts/boldpixels/BoldPixels.otf" id="5_17itk"]
[ext_resource type="FontFile" uid="uid://bgv586r20ps8e" path="res://Fonts/Xolonium-Regular.ttf" id="6_oyhpq"]
[ext_resource type="VideoStream" uid="uid://bcxrq7kvhwib4" path="res://Three Students video.ogv" id="7_nwdeh"]
[ext_resource type="AudioStream" uid="uid://dwxvsbuh66751" path="res://Assets/cute-level-up-2-189851.mp3" id="7_uj3e5"]
[ext_resource type="VideoStream" uid="uid://ch5xurwpm1olp" path="res://Assets/SirSuperSaiyanAlpha.ogv" id="8_03i4v"]
[ext_resource type="AudioStream" uid="uid://bas281k5pspty" path="res://Assets/StockTune-Pixelated Dreamscape Journey_1762775920.mp3" id="8_ebwgt"]
[ext_resource type="AudioStream" uid="uid://2a6enn3a4v67" path="res://Assets/game-over-arcade-6435.mp3" id="9_7axcy"]
[ext_resource type="VideoStream" uid="uid://mohs1qjxc2jk" path="res://Assets/VictoryVideo.ogv" id="9_q4dr5"]

[sub_resource type="Curve2D" id="Curve2D_17itk"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Level2Game" type="Node2D"]
script = ExtResource("1_ahagg")
sir_scene = ExtResource("3_78eq0")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.85490197)
offset_right = 2304.762
offset_bottom = 3442.8572
scale = Vector2(0.21, 0.21)
texture = ExtResource("1_xqgqe")
stretch_mode = 1

[node name="Student" parent="." instance=ExtResource("2_1yuii")]
scale = Vector2(1.005, 1.005)

[node name="GameOverText" type="Label" parent="."]
offset_left = 31.0
offset_top = 291.0
offset_right = 479.0
offset_bottom = 347.0
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_17itk")
theme_override_font_sizes/font_size = 55
text = "You Got Caught !! "

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="SirTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScorePlusTimer" type="Timer" parent="."]

[node name="VictoryTImer" type="Timer" parent="."]
wait_time = 21.15
one_shot = true

[node name="SirPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_17itk")

[node name="SirSpawnLocation" type="PathFollow2D" parent="SirPath"]

[node name="Score" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 99.0
offset_top = 11.0
offset_right = 402.0
offset_bottom = 120.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.52156866)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("6_oyhpq")
theme_override_font_sizes/font_size = 43
text = "Score "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sequence1Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Sounds" type="Node" parent="."]

[node name="ThreeStudentsVid" type="VideoStreamPlayer" parent="Sounds"]
offset_right = 1080.0
offset_bottom = 1620.0
scale = Vector2(0.445, 0.445)
stream = ExtResource("7_nwdeh")

[node name="SirSuperSaiyan" type="VideoStreamPlayer" parent="Sounds"]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.445, 0.445)
stream = ExtResource("8_03i4v")

[node name="VictoryVid" type="VideoStreamPlayer" parent="Sounds"]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.444, 0.444)
stream = ExtResource("9_q4dr5")

[node name="SfxLevelUp" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("7_uj3e5")
volume_db = 3.0

[node name="MusicMainGame" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_ebwgt")

[node name="SfxGameOver" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("9_7axcy")
volume_db = 5.0

[node name="GetReadyText" type="Label" parent="."]
offset_left = 31.0
offset_top = 291.0
offset_right = 479.0
offset_bottom = 347.0
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_17itk")
theme_override_font_sizes/font_size = 55
text = "Get Ready !! "
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="hit" from="Student" to="." method="_on_student_hit"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_game_over_timer_timeout"]
[connection signal="timeout" from="SirTimer" to="." method="_on_sir_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="ScorePlusTimer" to="." method="_on_score_plus_timer_timeout"]
[connection signal="timeout" from="VictoryTImer" to="." method="_on_victory_t_imer_timeout"]
[connection signal="finished" from="Sounds/ThreeStudentsVid" to="." method="_on_three_students_vid_finished"]
[connection signal="finished" from="Sounds/SirSuperSaiyan" to="." method="_on_sir_super_saiyan_finished"]
[connection signal="finished" from="Sounds/VictoryVid" to="." method="_on_victory_vid_finished"]
